k8s/namespace-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: "production"
